[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/ui/banners/squad_banners/banner_empty.png" type="Texture" id=1]
[ext_resource path="res://asset/military/squad/squad.gd" type="Script" id=2]
[ext_resource path="res://asset/military/squad/squad_selected_animation.tres" type="Animation" id=3]
[ext_resource path="res://asset/military/squad/squad_control.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.2908, 63.419 )

[sub_resource type="CircleShape2D" id=2]
radius = 187.07

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.90248, 7.38528 )

[sub_resource type="Animation" id=4]
loop = true

[node name="squad" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="KinematicBody2D"]

[node name="banner" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0.635294 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0.688, -113.864 )
z_index = 2
texture = ExtResource( 1 )

[node name="area_click" type="Area2D" parent="KinematicBody2D/banner"]
position = Vector2( 0.280626, 112.927 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/banner/area_click"]
position = Vector2( -0.200927, -126.098 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 3 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
anims/squad_idle = SubResource( 4 )
anims/squad_selected = ExtResource( 3 )

[node name="timer_reset_target" type="Timer" parent="KinematicBody2D"]
autostart = true

[node name="dead_troop_holder" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="troop_holder" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="KinematicBody2D/banner/area_click" to="KinematicBody2D" method="_on_area_click_input_event"]
[connection signal="body_entered" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="KinematicBody2D/timer_reset_target" to="." method="_on_timer_reset_target_timeout"]
